feat: adds an example text/event-stream endpoint
